# djobmatch

./: .env.example  .gitignore  CLAUDE.md  NOTICE  README.md  manage.py  pyproject.toml
.claude/: MEMORY.md
.claude/agent-memory/code-reviewer/: project_review_baseline.md  user_profile.md
.claude/agents/: architecture-explorer.md  code-reviewer.md  provider-adapter.md  test-writer.md
bruno/: 1 - Parse Job.bru  2 - Parse Resume.bru  3 - Match.bru  4 - Parse Job (mismatch).bru  5 - Match (mismatch).bru  bruno.json
config/: api.py  settings.py  urls.py
docs/: subagents-notes.md
jobs/: api.py  apps.py  models.py  schemas.py  services.py
jobs/migrations/: 0001_enable_pgvector.py  0002_initial.py
matching/: api.py  apps.py  models.py  schemas.py  services.py
matching/migrations/: 0001_initial.py
resumes/: api.py  apps.py  models.py  schemas.py  services.py
resumes/migrations/: 0001_initial.py
services/: embeddings.py  hashing.py  llm.py  prompts.py
tests/: conftest.py  test_jobs.py  test_matching.py  test_resumes.py
website/: djobmatch
website/joboffers/: admin.py  forms.py  models.py  views.py
website/website/: settings.py  urls.py
website/website/templates/: administrar.html  base.html  baseuser.html  correoenviarofertaform.html  empleadorform.html  funcionform.html  ingresoadmin.html  inicio.html  noactivo.html  nousuario.html  ofertadet.html  ofertaenviada.html  ofertaform.html  ofertalist.html  postulantedetalle.html  postulanteform.html  postulantes.html  reqespecialidadform.html  reqidioma.html  reqsoftware.html
(+2 files in other folders)
